--- a/style.css
+++ b/style.css
@@ -1,38 +1,117 @@
-.page {
+body{
+    overflow-x: hidden;
+}
+#frontpage{
     position: relative;
-    border: 2px solid darkblue;
-    height: 44rem;
-    width: 28rem;
-    border-radius: 2rem;
-    background-image: url(./images/bg2.jpg);
+    /* background-image: url(./images/banksss.jpg); */
     background-repeat: none;
     background-size: cover;
+    max-width: 100%;
+}
+.page {
+    position: relative;
+    /* border: 2px solid darkblue; */
+    height: 45rem;
+    width: 50rem;
+    border-radius: 2rem;
+    /* background-image: url(./images/bg2.jpg); */
+    background-repeat: none;
+    background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
+
+}
+#mobile{
+    position: relative;
+    /* justify-self: flex-end !important; */
+    left: 50rem;
+    /* float: right; */
+    top: 3rem;
+    max-width: fit-content;
+    width: 100%;
+}
+.text{
+    font-size: 1rem;
+    font-style: italic;
+    color: lightseagreen;
 }
 #ID{
     position: relative;
-    left: 19rem;
+    left: 39rem;
 }
 #PASS{
     position: relative;
     top: -1rem;
 }
-#signUp{
+#signUpp{
     position: relative;
     font-size: 13px;
-    color: aliceblue;
-    top: -0.5rem;
+    color: black;
+    top: 0.5rem;
+}
+#LogIn{
+    background: linear-gradient(135deg, #e846bd, #2b1604);
+    color: #fff;
+}
+#LogIn:hover{
+    background: linear-gradient(-135deg, #e846bd, #2b1604);
 }
 #link{
     position: relative;
-    left: 19rem;
+    left: 39rem;
     color: aliceblue !important;
 }
-.btnn{
+/*  */
+#signUp{
     position: relative;
-    top: -0.8rem;
-    left: rem;
+    background: linear-gradient(145deg, #2b1604, #e846bd);
+    top: 1rem;
+    color: #fff !important;
+    /* padding: 5rem !important; */
 }
-#btn2{
+#signUp:hover{
+    background: linear-gradient(-175deg, #2b1604, #e846bd);
+}
+.settings{
     position: relative;
-    top: -1rem;
+    /* border: 4px solid rgb(27, 27, 11); */
+    height: 3rem;
+    width: 3rem;
+    border-radius: 100%;
+    /* left: 2rem; */
+    top: 0.3rem;
+    object-fit: cover;
+}
+#settingsIMG{
+    position: relative;
+    }
+#set{
+    position: relative;
+    font-size: 11px;
+    color: black;
+    top: 0.3rem;
+}
+.quick{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.Needhelp{
+    position: relative;
+    /* border: 4px solid rgb(27, 27, 11); */
+    height: 3rem;
+    width: 3rem;
+    /* border-radius: 100%; */
+    /* left: 5rem; */
+    top: 0.3rem;
+    object-fit: cover;
+}
+.sett3{
+    position: relative;
+    /* border: 4px solid rgb(27, 27, 11); */
+    height: 3rem;
+    width: 3rem;
+    /* left: 12rem; */
+    top: 0.3rem;
+    object-fit: cover;
 }
